# OpenGL-Real-Time-Rendering-App

./: CMakeLists.txt  Camera.cpp  Camera.h  README.md  VAO.cpp  camera.cpp  main.cpp  texture.cpp  texture.h
shaders/: default.frag  default.vert  light.vert
